--- a/templates/home.html
+++ b/templates/home.html
@@ -8,13 +8,11 @@
         body {
             margin: 0;
             padding: 0;
+            background-color: black;
             font-family: Arial, sans-serif;
-            background-image: url("https://i.pinimg.com/originals/0d/2e/f0/0d2ef0d027f49068cc43fb66177f4411.gif");
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
         }
     
+
         .navbar {
             background-color: rgba(255, 255, 255, 0.5);
             overflow: hidden;
